# lost_frase

./: .gitignore  README.md  for_testing.py  func_for_audio.py  func_for_text.py  main.py  pyproject.toml
audio/: lost_audio1.m4a
model/: model.txt
text/: axolotls.txt
transcribed_text/: transcribed_text.txt
