[tool.poetry]
name = "lost-audio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vosk = "^0.3.45"
ffmpeg = "^1.4"
pydub = "^0.25.1"
transformers = "^4.43.2"
noisereduce = "^3.0.2"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
